--- a/public/css/project2.css
+++ b/public/css/project2.css
@@ -71,3 +71,6 @@ button { padding: 5px 7px }
     width: 560px; min-height: 350px;
     white-space: pre }
 
+/* recaptcha 이미지 */
+.cap { display: inline-flex; padding: 0;
+    margin: -15px 0 0 -10px; }
