--- a/public/css/project2.css
+++ b/public/css/project2.css
@@ -16,7 +16,7 @@ hr { background: black; height: 2px; }
 .copy { text-align: center }
 
 /* 회원가입, 로그인 */
-form { width: 320px; margin: 0 auto; vertical-align: middle }
+form { width: 350px; margin: 0 auto; vertical-align: middle }
 div { padding: 5px }
 form label { display: inline-block; width: 110px;
         text-align: right; font-weight: bold }
@@ -73,4 +73,5 @@ button { padding: 5px 7px }
 
 /* recaptcha 이미지 */
 .cap { display: inline-flex; padding: 0;
-    margin: -15px 0 0 -10px; }
+    margin: -10px 0 0 -10px; width: 200px }
+
