--- a/public/css/project2.css
+++ b/public/css/project2.css
@@ -75,3 +75,7 @@ button { padding: 5px 7px }
 .cap { display: inline-flex; padding: 0;
     margin: -10px 0 0 -10px; width: 200px }
 
+/* 로그아웃 버튼 */
+.logout {
+    position: absolute; top: 40%; left: 45%;
+}
